Fixing whatsapp z-index

--- a/style.css
+++ b/style.css
@@ -293,7 +293,6 @@ body {
 .image-placeholder img {
     width: 100%;
     margin: -50px -50px 0 -50px;
-    z-index: 1001;
 }
 
 .image-placeholder.oval img {
